<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.smartgarden1.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_garden"
        android:name="com.example.smartgarden1.ui.garden.GardenFragment"
        android:label="@string/title_garden"
        tools:layout="@layout/fragment_garden" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.smartgarden1.ui.dashboard.DashboardFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
    android:id="@+id/navigation_map"
    android:name="com.example.smartgarden1.ui.map.MapFragment"
    android:label="@string/title_map"
    tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_album"
        android:name="com.example.smartgarden1.ui.album.AlbumFragment"
        android:label="@string/title_album"
        tools:layout="@layout/fragment_album" />

</navigation>
